2014-08-18  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1935: HotSpot extraction needs to depend on the
	tarball being downloaded
	* Makefile.am:
	(extract-hotspot): Depend on download-hotspot.
	* NEWS: Updated.

2014-06-02  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1813: HotSpot URL should be used with --enable-hg
	* Makefile.am:
	(HOTSPOT_URL): Drop unused variable to avoid
	confusion.
	(.PHONY): Add clean-download-hotspot.
	(download); Depend on download-hotspot.
	(clean-download): Move clean-download-nashorn
	to clean-download-openjdk to retain ordering.
	(download-openjdk): Remove hotspot from for loop
	and HotSpot zip download rules.
	(clean-download-openjdk): Depend on clean-download-nashorn
	and clean-download-hotspot.
	(download-nashorn): Depend on download-openjdk so
	root directory exists for Nashorn checkout.
	(download-hotspot): New target. Cloning now uses HS_URL
	as with zip downloading.
	(clean-download-hotspot): Separated from clean-download-openjdk.
	* NEWS: Updated.

2014-06-02  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1364: Replace hgforest support
	* INSTALL:
	Remove documentation of --with-project as
	option is being removed.
	* Makefile.am:
	(OPENJDK_HG_URL): Removed.
	(CVMI_HG_URL): Likewise.
	(CLOSURES_HG_URL): Likewise.
	(CACIOCAVALLO_HG_URL): Likewise.
	(BSD_HG_URL): Likewise.
	(NIO2_HG_URL): Likewise.
	(REV_ARG): Added and set conditionally if
	$(HGREV) is set.
	(clean-local): Drop clean-hgforest.
	(hgforest): Removed.
	(clean-hgforest): Likewise.
	(download-openjdk): Remove project conditionals.
	Replace fclone usage with multiple clone calls.
	(download-nashorn): Add hg support.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_ENABLE_HG): Drop IT_WITH_PROJECT dependency
	and simply to yes/no.
	(IT_WITH_PROJECT): Removed.
	* configure.ac: Drop IT_WITH_PROJECT.

2014-06-02  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(download-openjdk): Fix typo using
	HOTSPOT_SHA256SUM instead of HS_SHA256SUM.